# PicoBot-v2

./: .gitignore  Agents.md  PicoBot_Mobile_Controller_PRD.md  README.md  index.html  macro_recorder.py  main.py  picobot.py  pyproject.toml
CIRCUITPY/: boot.py  code.py
picobot/: __init__.py  __main__.py  app.py  config.py  context.py  countdown.py  messaging.py  settings.py
picobot/playback/: __init__.py  macro_controller.py
picobot/remote/: __init__.py  control.py  http.py
picobot/services/: __init__.py  system.py
picobot/transport/: __init__.py  serial_manager.py
picobot/ui/: __init__.py  views.py
picobot_controller/: .gitignore  PHASE1_COMPLETE.md  README.md  pubspec.yaml
picobot_controller/android/app/: build.gradle.kts
picobot_controller/assets/templates/: default_template.json
picobot_controller/ios/Runner/: Info.plist
picobot_controller/ios/Runner.xcodeproj/: project.pbxproj
picobot_controller/lib/: main.dart
picobot_controller/lib/models/: key_config.dart  layout_config.dart  server_profile.dart  template.dart
picobot_controller/lib/providers/: connection_provider.dart  template_provider.dart
picobot_controller/lib/screens/: controller_screen.dart  home_screen.dart  log_console_screen.dart  manage_templates_screen.dart  (+2 more)
picobot_controller/linux/: CMakeLists.txt
picobot_controller/test/: widget_test.dart
picobot_controller/web/: index.html  manifest.json
picobot_controller/windows/: CMakeLists.txt
tests/: test_app_factory.py  test_config.py  test_countdown_service.py  test_macro_controller.py  test_serial_manager.py
(+20 files in other folders)
